// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button should be clickable 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "rgba(18, 18, 18, 1)",
      "borderRadius": 26,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 16,
      "marginLeft": 16,
      "marginRight": 16,
      "marginTop": 32,
      "opacity": 1,
      "paddingBottom": 14,
      "paddingLeft": 14,
      "paddingRight": 14,
      "paddingTop": 14,
    }
  }
  testID="primary_button"
>
  <Text
    style={
      [
        {
          "fontFamily": "RegularFont",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "rgba(242, 242, 242, 1)",
          "fontFamily": "SoraSemiBold",
          "fontWeight": "600",
          "textAlign": "center",
        },
      ]
    }
  />
</View>
`;

exports[`button should match styling of button type fill 1`] = `
<View
  accessibilityState={
    {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "rgba(18, 18, 18, 1)",
      "borderRadius": 26,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 16,
      "marginLeft": 16,
      "marginRight": 16,
      "marginTop": 32,
      "opacity": 1,
      "paddingBottom": 14,
      "paddingLeft": 14,
      "paddingRight": 14,
      "paddingTop": 14,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "RegularFont",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "rgba(242, 242, 242, 1)",
          "fontFamily": "SoraSemiBold",
          "fontWeight": "600",
          "textAlign": "center",
        },
      ]
    }
  >
    Submit
  </Text>
</View>
`;

exports[`button should match styling of button type fill 2`] = `
<View
  accessibilityState={
    {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "rgba(18, 18, 18, 0.3)",
      "borderRadius": 26,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 16,
      "marginLeft": 16,
      "marginRight": 16,
      "marginTop": 32,
      "opacity": 1,
      "paddingBottom": 14,
      "paddingLeft": 14,
      "paddingRight": 14,
      "paddingTop": 14,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "RegularFont",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "rgba(242, 242, 242, 1)",
          "fontFamily": "SoraSemiBold",
          "fontWeight": "600",
          "textAlign": "center",
        },
      ]
    }
  >
    Submit
  </Text>
</View>
`;

exports[`button should match styling of button type flat 1`] = `
<View
  accessibilityState={
    {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "transparent",
      "borderRadius": 26,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 16,
      "marginLeft": 16,
      "marginRight": 16,
      "marginTop": 32,
      "opacity": 1,
      "paddingBottom": 14,
      "paddingLeft": 14,
      "paddingRight": 14,
      "paddingTop": 14,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "RegularFont",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "rgba(18, 18, 18, 1)",
          "fontFamily": "SoraSemiBold",
          "fontWeight": "600",
          "textAlign": "center",
        },
      ]
    }
  >
    Submit
  </Text>
</View>
`;

exports[`button should match styling of button type flat 2`] = `
<View
  accessibilityState={
    {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "transparent",
      "borderRadius": 26,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 16,
      "marginLeft": 16,
      "marginRight": 16,
      "marginTop": 32,
      "opacity": 1,
      "paddingBottom": 14,
      "paddingLeft": 14,
      "paddingRight": 14,
      "paddingTop": 14,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "RegularFont",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "rgba(18, 18, 18, 0.3)",
          "fontFamily": "SoraSemiBold",
          "fontWeight": "600",
          "textAlign": "center",
        },
      ]
    }
  >
    Submit
  </Text>
</View>
`;

exports[`button should not be clickable when disabled 1`] = `
<View
  accessibilityState={
    {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "rgba(18, 18, 18, 0.3)",
      "borderRadius": 26,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 16,
      "marginLeft": 16,
      "marginRight": 16,
      "marginTop": 32,
      "opacity": 1,
      "paddingBottom": 14,
      "paddingLeft": 14,
      "paddingRight": 14,
      "paddingTop": 14,
    }
  }
  testID="primary_button"
>
  <Text
    style={
      [
        {
          "fontFamily": "RegularFont",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "rgba(242, 242, 242, 1)",
          "fontFamily": "SoraSemiBold",
          "fontWeight": "600",
          "textAlign": "center",
        },
      ]
    }
  />
</View>
`;
